# 3D-renderer

./: .gitignore  CMakeLists.txt
src/: application.c  application.h  defines.h  game.c  game.h  main.c
src/core/: color.c  darray.c  darray.h  event.c  event.h  math.h  memory.c  memory.h  rect.h
src/engine/: color.c  color.h  framebuffer.c  framebuffer.h  renderer.c  renderer.h  window.c  window.h
src/math/: vector.h
